Word Spacing Fixed

--- a/txtstyle.css
+++ b/txtstyle.css
@@ -1,1 +1,4 @@
-html, body {font-family:Helvetica, Arial, sans-serif}
+html, body {
+  font-family:Helvetica, Arial, sans-serif;
+  word-spacing: 100vw;
+}
